--- a/HomeMangager.DAL/Properties/Resources.resx
+++ b/HomeMangager.DAL/Properties/Resources.resx
@@ -182,6 +182,7 @@
   </data>
   <data name="U_Rollen" xml:space="preserve">
     <value>U_Rollen</value>
+	  </data>
   <data name="D_BudgetCategorie" xml:space="preserve">
     <value>D_BudgetCategorie</value>
   </data>
