--- a/HomeMangager.DAL/Properties/Resources.resx
+++ b/HomeMangager.DAL/Properties/Resources.resx
@@ -180,8 +180,9 @@
   <data name="S_RechtenCatogorie" xml:space="preserve">
     <value>S_RechtenCatogorie</value>
   </data>
-  <data name="U_Rollen" xml:space="preserve">
+	<data name="U_Rollen" xml:space="preserve">
     <value>U_Rollen</value>
+	  </data>
   <data name="D_BudgetCategorie" xml:space="preserve">
     <value>D_BudgetCategorie</value>
   </data>
