--- a/HomeMangager.DAL/Properties/Resources.resx
+++ b/HomeMangager.DAL/Properties/Resources.resx
@@ -300,4 +300,16 @@
   <data name="U_Adressen" xml:space="preserve">
     <value>U_Adressen</value>
   </data>
+  <data name="D_TelefoonNummers" xml:space="preserve">
+    <value>D_TelefoonNummers</value>
+  </data>
+  <data name="I_TelefoonNummers" xml:space="preserve">
+    <value>I_TelefoonNummers</value>
+  </data>
+  <data name="S_TelefoonNummers" xml:space="preserve">
+    <value>S_TelefoonNummers</value>
+  </data>
+  <data name="U_TelefoonNummers" xml:space="preserve">
+    <value>U_TelefoonNummers</value>
+  </data>
 </root>
