Update 11/12 working on Unlock users

--- a/HomeMangager.DAL/Properties/Resources.resx
+++ b/HomeMangager.DAL/Properties/Resources.resx
@@ -288,4 +288,7 @@
   <data name="U_EmailAdressen" xml:space="preserve">
     <value>U_EmailAdressen</value>
   </data>
+  <data name="S_LockedUsers" xml:space="preserve">
+    <value>S_LockedUsers</value>
+  </data>
 </root>
