--- a/HomeMangager.DAL/Properties/Resources.resx
+++ b/HomeMangager.DAL/Properties/Resources.resx
@@ -189,4 +189,16 @@
   <data name="U_Login" xml:space="preserve">
     <value>U_Login</value>
   </data>
+  <data name="D_ToDoCategorieën" xml:space="preserve">
+    <value>D_ToDoCategorieën</value>
+  </data>
+  <data name="S_ToDoCategorieën" xml:space="preserve">
+    <value>S_ToDoCategorieën</value>
+  </data>
+  <data name="I_ToDoCategorieën" xml:space="preserve">
+    <value>I_ToDoCategorieën</value>
+  </data>
+  <data name="U_ToDoCategorieën" xml:space="preserve">
+    <value>U_ToDoCategorieën</value>
+  </data>
 </root>
