--- a/HomeMangager.DAL/Properties/Resources.resx
+++ b/HomeMangager.DAL/Properties/Resources.resx
@@ -201,4 +201,16 @@
   <data name="U_ToDoCategorieën" xml:space="preserve">
     <value>U_ToDoCategorieën</value>
   </data>
+  <data name="D_ToDoCollecties" xml:space="preserve">
+    <value>D_TodoCollecties</value>
+  </data>
+  <data name="S_ToDoCollecties" xml:space="preserve">
+    <value>S_ToDoCollecties</value>
+  </data>
+  <data name="I_ToDoCollecties" xml:space="preserve">
+    <value>I_ToDoCollecties</value>
+  </data>
+  <data name="U_ToDoCollecties" xml:space="preserve">
+    <value>U_ToDoCollecties</value>
+  </data>
 </root>
