--- a/HomeMangager.DAL/Properties/Resources.resx
+++ b/HomeMangager.DAL/Properties/Resources.resx
@@ -336,4 +336,7 @@
   <data name="S_NotitiesByID" xml:space="preserve">
     <value>S_NotitiesByID</value>
   </data>
+  <data name="I_GetAdresMetGemeente" xml:space="preserve">
+    <value>I_GetAdresMetGemeente</value>
+  </data>
 </root>
