--- a/HomeMangager.DAL/Properties/Resources.resx
+++ b/HomeMangager.DAL/Properties/Resources.resx
@@ -291,4 +291,7 @@
   <data name="S_LockedUsers" xml:space="preserve">
     <value>S_LockedUsers</value>
   </data>
+  <data name="U_LockedUsers" xml:space="preserve">
+    <value>U_LockedUsers</value>
+  </data>
 </root>
