TodoDetailsRepository setup + resources

--- a/HomeMangager.DAL/Properties/Resources.resx
+++ b/HomeMangager.DAL/Properties/Resources.resx
@@ -249,4 +249,16 @@
   <data name="U_ToDoBijlage" xml:space="preserve">
     <value>U_ToDoBijlage</value>
   </data>
+  <data name="D_ToDoDetails" xml:space="preserve">
+    <value>D_ToDoDetails</value>
+  </data>
+  <data name="S_ToDoDetails" xml:space="preserve">
+    <value>S_ToDoDetails</value>
+  </data>
+  <data name="I_ToDoDetails" xml:space="preserve">
+    <value>I_ToDoDetails</value>
+  </data>
+  <data name="U_ToDoDetails" xml:space="preserve">
+    <value>U_ToDoDetails</value>
+  </data>
 </root>
