master in todobranch update

--- a/HomeMangager.DAL/Properties/Resources.resx
+++ b/HomeMangager.DAL/Properties/Resources.resx
@@ -260,6 +260,7 @@
   </data>
   <data name="S_ToDoDetails" xml:space="preserve">
     <value>S_ToDoDetails</value>
+  </data>
   <data name="BackupHomeManagerDB" xml:space="preserve">
     <value>BackupHomeManagerDB</value>
   </data>
