--- a/HomeMangager.DAL/Properties/Resources.resx
+++ b/HomeMangager.DAL/Properties/Resources.resx
@@ -447,4 +447,7 @@
   <data name="S_BudgetOverzichtInkomstenV1" xml:space="preserve">
     <value>S_BudgetOverzichtInkomstenV1</value>
   </data>
+  <data name="D_BudgetBijlage" xml:space="preserve">
+    <value>D_BudgetBijlage</value>
+  </data>
 </root>
