Fix StickyNote Procedures Fout

--- a/HomeMangager.DAL/Properties/Resources.resx
+++ b/HomeMangager.DAL/Properties/Resources.resx
@@ -450,4 +450,19 @@
   <data name="D_BudgetBijlage" xml:space="preserve">
     <value>D_BudgetBijlage</value>
   </data>
+  <data name="S_StickyNotes" xml:space="preserve">
+    <value>S_StickyNotes</value>
+  </data>
+  <data name="S_StickyNotesByID" xml:space="preserve">
+    <value>S_StickyNotesByID</value>
+  </data>
+  <data name="U_StickyNotes" xml:space="preserve">
+    <value>U_StickyNotes</value>
+  </data>
+  <data name="I_StickyNotes" xml:space="preserve">
+    <value>I_StickyNotes</value>
+  </data>
+  <data name="D_StickyNotes" xml:space="preserve">
+    <value>D_StickyNotes</value>
+  </data>
 </root>
